# tut-django-channels

./: README.md  pyproject.toml  requirements.txt
channels_site/: manage.py
channels_site/channels_site/: asgi.py  settings.py  urls.py  wsgi.py
channels_site/chat/: consumers.py  tests.py
channels_site/chat/templates/chat/: index.html  room.html
