[tool.poetry]
name = "tut-django-channels"
version = "0.1.0"
description = ""
authors = ["felipefalcantara <felipefr.alcantara@gmail.com>"]
readme = "README.md"
packages = [{include = "tut_django_channels"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.0.0"
selenium = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
